<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prova Movel</string>
    <string name="action_settings">Settings</string>
    <string name="titulo_aplicacao">Prova Móvel</string>
    <string name="btn_entrar">Entrar</string>
    <string name="lbl_matricula">Matrícula</string>
    <string name="btn_obterprova">Obter Prova Online</string>
    <string name="btn_iniciar_prova">Iniciar</string>
    <string name="lbl_titulo_prova">Titulo da Prova:</string>
    <string name="lbl_numero_questoes_prova">Número de Questões:</string>
    <string name="title_activity_listar_provas">ListarProvasActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_detalhe_prova">DetalheProvaActivity</string>
    <string name="title_activity_questao_aberta">QuestaoAbertaActivity</string>
    <string name="title_activity_questao_fechada">QuestaoFechadaActivity</string>
    <string name="title_activity_questao">QuestaoActivity</string>
    <string name="btn_prox">Próximo</string>
     <string name="btn_ant">Anterior</string>
    <string name="lbl_questao_aberta">Questao Aberta</string>
    <string name="lbl_questao_fechada">Questao Fechada</string>

</resources>
